# New-CMS

./: .env.example  .gitignore  IMPLEMENTATION_LOG.md  README.md  generate_news_og.py  generate_result_claude_news_og.py  openapi_temp.json
News CMS UI Design/: README.md  index.html  package.json
backend/: pyproject.toml  requirements.txt  test_startup.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/llm_providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  models.py  openai_provider.py  pricing.py  registry.py
backend/app/models/: __init__.py  audit_log.py  configuration.py  generation_history.py  news_trigger.py  prompt_version.py  published_config.py  structured_data.py  trigger_prompt.py  trigger_prompt_config.py  trigger_prompt_draft.py  user.py
backend/app/routers/: __init__.py  data.py  generation.py  health.py  stocks.py  triggers.py
backend/app/services/: __init__.py  audit_service.py  news_generation_service.py  prompt_service.py  publishing_service.py  structured_data_service.py  validation_service.py
backend/scripts/: check_db.py  create_workflow_indexes.py  migrate_trigger_prompts.py  test_api_connection.py
backend/tests/: test_database.py  test_health.py  test_models.py  test_prompt_service.py
backend/tests/integration/: test_database_schema.py
backend/tests/models/: test_generation_history.py  test_prompt_version.py  test_trigger_prompt_config.py
docs/: CHANGELOG-epic1-api-setup.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_STATUS.md  NEWS-CMS-WORKFLOW-STORY-UPDATES.md  prd.md  (+12 more)
(+173 files in other folders)
